--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+# Don't Remove Credit @VJ_Botz
+# Subscribe YouTube Channel For Amazing Bot @Tech_VJ
+# Ask Doubt on telegram @KingVJ01
+
 pyrogram>=2.0.30 
  tgcrypto 
  pymongo[srv]==3.12.3 
@@ -25,7 +29,8 @@ youtube-search-python==1.4.6
 yt-dlp
 youtube-dl
 requests 
-  
+  
+
   
  #---others----# 
  opencv-python-headless==4.7.0.68 
