--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 pyrogram>=2.0.30 
  tgcrypto 
  pymongo[srv]==3.12.3 
- motor
+ motor==2.5.1
  marshmallow==3.14.1 
  umongo==3.0.1 
  requests 
@@ -57,7 +57,6 @@ pyshorteners
 pyromod
 colorama
 openai==0.25.0
-
-
+dnspython==2.3.0
 
   
