--- a/render.yaml
+++ b/render.yaml
@@ -5,11 +5,11 @@
 services:
   # A Docker web service
   - type: web
-    name: VJ-FILTER-BOT 
+    name: YS-FILTER-BOT 
     env: python
     startCommand: python3 bot.py
     buildCommand: pip3 install -U -r requirements.txt
-    repo: https://github.com/VJBots/VJ-FILTER-BOT.git # optional
+    repo: https://github.com/Naitik4singh/VJ-FILTER-BOT.git # optional
     region: oregon # optional (defaults to oregon)
     plan: free # optional (defaults to starter)
     branch: main # optional (defaults to master)
